--- a/src/components/MainHeader/MainHeader.module.css
+++ b/src/components/MainHeader/MainHeader.module.css
@@ -13,4 +13,11 @@
 
 .main-header h1 {
   color: white;
+  font-size: 40px;
+}
+
+@media (width <= 776px) {
+  .main-header h1 {
+    font-size: 20px;
+  }
 }
