--- a/src/components/Login/Login.module.css
+++ b/src/components/Login/Login.module.css
@@ -46,12 +46,16 @@
 .actions {
   text-align: center;
   display: flex;
+  align-items: center;
 }
 
-@media (min-width: 768px) {
-  .control {
-    align-items: center;
-    flex-direction: row;
+@media (width <= 768px) {
+  .actions {
+    display: block;
+    text-align: center;
   }
 
+  .actions button {
+    width: 100%;
+  }
 }
