--- a/src/components/UI/Button/Button.module.css
+++ b/src/components/UI/Button/Button.module.css
@@ -5,9 +5,13 @@
   color: white;
   padding: 5px 20px;
   cursor: pointer;
-  font-size: 1.15rem;
+  font-size: 1rem;
   border-radius: 30px;
   text-decoration: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  fill: white;
 }
 
 .button:hover,
@@ -27,5 +31,6 @@ button:active:disabled {
   background: #ccc;
   border-color: #ccc;
   color: #666666;
+  fill: #666666;
   cursor: not-allowed;
 }
