--- a/src/components/MainHeader/MainHeader.module.css
+++ b/src/components/MainHeader/MainHeader.module.css
@@ -7,7 +7,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background: #741188;
+  background: linear-gradient(270deg, #e40172, #741188);
   padding: 0 2rem;
 }
 
