--- a/src/components/MainHeader/Navigation.module.css
+++ b/src/components/MainHeader/Navigation.module.css
@@ -23,8 +23,8 @@
 
 .nav button {
   font: inherit;
-  background: #dd0db0;
-  border: 1px solid #dd0db0;
+  background: linear-gradient(90deg, #dd0db0, #8d046f);
+  border: none;
   padding: 0.5rem 1.5rem;
   color: white;
   cursor: pointer;
