--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -8,9 +8,20 @@
 }
 
 .home h1 {
-  font-size: 30px;
+  font-size: 40px;
   color: transparent;
   background: linear-gradient(90deg, #6c7cd3, #da79ee);
+  background-clip: text;
+  font-weight: 900;
+  text-transform: uppercase;
+  margin-bottom: 0;
+}
+
+.home h2 {
+  font-size: 30px;
+  margin-top: 0;
+  color: transparent;
+  background: linear-gradient(90deg, #999, #000);
   background-clip: text;
 }
 
@@ -18,8 +29,13 @@
   margin: auto;
 }
 
-@media (width <= 600px) {
+@media (width <= 992px) {
   .home h1 {
+    font-size: 30px;
+  }
+
+  .home h2 {
     font-size: 20px;
+    margin-top: 0;
   }
 }
