--- a/src/components/UI/Button/Button.module.css
+++ b/src/components/UI/Button/Button.module.css
@@ -12,6 +12,8 @@
   justify-content: center;
   align-items: center;
   fill: white;
+  width: fit-content;
+  margin-bottom: 0.5rem;
 }
 
 .button:hover,
@@ -33,3 +35,10 @@ button:active:disabled {
   fill: #666666;
   cursor: not-allowed;
 }
+
+@media (width < 992px) {
+  .button {
+    width: 100%;
+  }
+}
+
