--- a/src/components/Home/ListItem.module.css
+++ b/src/components/Home/ListItem.module.css
@@ -3,30 +3,33 @@
     margin-block-end: 0;
     padding-inline-start: 0;
     list-style: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
-.listItems h3 {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-weight: normal;
-    margin-top: 0;
-    color: transparent;
-    background: linear-gradient(90deg, #3d4679, #752885);
-    background-clip: text;
+.listItems li {
+    margin-bottom: 15px;
+    margin-right: 10px;
+    width: 150px;
 }
+
+    .listItems li:last-child {
+        margin-bottom: 30px;
+    }
 
 .listItems a {
-    width: fit-content;
-    margin-bottom: 0;
-}
-
-.listItems li:last-child {
-    margin-bottom: 30px;
+    width: 100%;
 }
 
 @media (width <= 992px) {
-    .listItems h3 {
-        font-size: 15px;
+    .listItems li {
+        margin-right: -3px;
+        margin-left: -5px;
+    }
+    
+    .listItems li {
+        width: 100%;
     }
 }
