--- a/src/components/UI/Button/Button.module.css
+++ b/src/components/UI/Button/Button.module.css
@@ -36,7 +36,7 @@ button:active:disabled {
   cursor: not-allowed;
 }
 
-@media (width < 992px) {
+@media (width <= 500px) {
   .button {
     width: 100%;
   }
