UI improvement in Login Component

--- a/src/components/Login/Login.module.css
+++ b/src/components/Login/Login.module.css
@@ -20,7 +20,9 @@
 .control label {
   font-weight: bold;
   flex: 1;
-  color: #464646;
+  color: transparent;
+  background: linear-gradient(90deg, #666, #999);
+  background-clip: text;
   margin-bottom: 0.5rem;
 }
 
