added UI improvement on Home component

--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -10,7 +10,7 @@
 .home h1 {
   font-size: 35px;
   color: transparent;
-  background: linear-gradient(90deg, #6c7cd3, #da79ee);
+  background: linear-gradient(90deg, #848cbe, #f36fcb);
   background-clip: text;
   font-weight: 900;
   margin-bottom: 0;
