--- a/src/components/UI/Button/Button.module.css
+++ b/src/components/UI/Button/Button.module.css
@@ -1,6 +1,7 @@
 .button {
   font: inherit;
   background: linear-gradient(90deg, #fd7ebe, #8e1da5);
+  box-shadow: 0 1px 5px 0px rgba(0, 0, 0, 0.4);
   border: none;
   color: white;
   padding: 5px 20px;
