--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -10,7 +10,7 @@
 .home h1 {
   font-size: 35px;
   color: transparent;
-  background: linear-gradient(90deg, #848cbe, #f36fcb);
+  background: linear-gradient(90deg, #282c34, #61dafb);
   background-clip: text;
   font-weight: 900;
   margin-bottom: 0;
@@ -20,7 +20,7 @@
   font-size: 30px;
   margin-top: 0;
   color: transparent;
-  background: linear-gradient(90deg, #999, #666);
+  background: linear-gradient(90deg, #282c34, #61dafb);
   background-clip: text;
 }
 
@@ -33,7 +33,7 @@
   height: 5px;
   border-radius: 4px;
   border: none;
-  background: linear-gradient(90deg, #848cbe, #f36fcb);
+  background: linear-gradient(90deg, #282c34, #61dafb);
 }
 
 @media (width <= 600px) {
