--- a/src/components/MainHeader/Navigation.module.css
+++ b/src/components/MainHeader/Navigation.module.css
@@ -12,45 +12,8 @@
 }
 
 .nav li span {
-  color: transparent;
-  background: linear-gradient(90deg, #f8d4f0, #dee0ff);
-  background-clip: text;
   font-weight: 700;
-}
-
-.nav a {
-  text-decoration: none;
-  color: white;
-}
-
-.nav a:hover,
-.nav a:active {
-  color: #f3cafb;
-}
-
-.nav button {
-  font: inherit;
-  background: linear-gradient(90deg, #dd0db0, #8d046f);
-  border: none;
-  padding: 0.5rem 1.5rem;
-  color: white;
-  cursor: pointer;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.26);
-  border-radius: 20px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  fill: #fff
-}
-
-.nav button:focus {
-  outline: none;
-}
-
-.nav button:hover,
-.nav button:active {
-  color: #f3cafb;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.26);
+  color: #fff;
 }
 
 @media (width <=600px) {
